--- a/flow_planner/script/data/dataset/nuplan_data.yaml
+++ b/flow_planner/script/data/dataset/nuplan_data.yaml
@@ -1,7 +1,7 @@
 train:
   _target_: flow_planner.data.dataset.nuplan.NuPlanDataset
-  data_dir: '/data/diffusion-planner-data/1M-balance-patch12k-250402'
-  data_list: '/data/diffusion-planner-data/jsons/1M-balance-patch12k-250402.json'
+  data_dir: # TODO: path to the training .npz data folder
+  data_list: # TODO: path to the training .npz json file
   past_neighbor_num: ${model.neighbor_num}
   predicted_neighbor_num: ${model.neighbor_pred_num}
   future_len: ${model.future_len}
